<resources>
    <string name="app_name">ArtFolio</string>
    <string name="designer">DESIGNER</string>
    <string name="btn_lbl_designer">ARTIST</string>
    <string name="btn_lbl_Clint">CLIENT</string>
    <string name="welcome_to_designers_store">WELCOME TO ART FOLIO</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="login_client">LOGIN</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_first_name_Client">First name</string>
    <string name="hint_last_name_Client">Last name</string>
    <string name="et_hint_confirm_password_Client">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition"><![CDATA[I Agree To The Terms & Condition]]></string>
    <string name="btn_lbl_register">Register</string>
    <string name="login"><u>Login</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="content_description">image</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="register_success">You are registered successfully.</string>

    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_chat">Chat</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>
    <string name="et_hint_profession">Profession</string>
    <string name="err_msg_enter_profession">Please enter profession</string>
    <string name="title_activity_main__products_">MainActivity</string>
    <string name="title_products">Products</string>
    <string name="title_sold_products">Sold Products</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Setting</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logut</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_address_list">ADDRESS LIST</string>
    <string name="lbL_add_address">Add Address</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="err_your_address_deleted_successfully">Your address was deleted successfully.</string>
    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>
    <string name="hint_other_details">Other details</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="msg_your_address_updated_successfully">Your address was updated successfully.</string>
    <string name="err_your_address_added_successfully">Your address was added successfully.</string>

    <!--START-->
    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code.</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>
    <string name="title_select_address">SELECT ADDRESS</string>
    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="action_add_product">Add Product</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="product_delete_success_message">Your product was deleted successfully.</string>
    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="btn_lbl_add_to_cart">ADD TO CART</string>
    <string name="btn_lbl_go_to_cart">GO TO CART</string>
    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="success_message_item_added_to_cart">Product is added to your cart.</string>
    <string name="design_uploaded_success_message">Your design was uploaded successfully.</string>
    <string name="err_msg_select_design_image">Please select design image.</string>
    <string name="err_msg_enter_design_title">Please enter design title.</string>
    <string name="err_msg_enter_design_price">Please enter design price.</string>
    <string name="err_msg_enter_design_description">Please enter design description.</string>
    <string name="err_msg_enter_design_quantity">Please enter design quantity.</string>
    <string name="no_dashboard_item_found">No items found!</string>
    <string name="action_cart">My Cart</string>
    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>
    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="no_orders_placed_yet">No orders placed yet!</string>
    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>

    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="no_products_sold_yet">No products sold yet!</string>
    <string name="title_sold_product_details">SOLD PRODUCT DETAILS</string>
    <string name="title_Account">Account</string>
    <string name="no_favorite_item_found">No Favorite Item Found</string>
    <string name="Design_AddedTo_Favorite">The design has been added to the Favorite list</string>
    <!--END-->
</resources>