<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_designers"
    app:startDestination="@+id/navigation_Products">


    <fragment
        android:id="@+id/navigation_Products"
        android:name="com.example.designersstore.presentation.ui.fragmentsdesigners.ProductsFragment"
        android:label="@string/title_products"
        tools:layout="@layout/products_fragment" />

    <fragment
        android:id="@+id/navigation_chat_Designer"
        android:name="com.example.designersstore.presentation.ui.fragmentsdesigners.ChatDesignerFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat_designers" />

    <fragment
        android:id="@+id/navigation_sold_products"
        android:name="com.example.designersstore.presentation.ui.fragmentsdesigners.SoldProductsFragment"
        android:label="@string/title_sold_products"
        tools:layout="@layout/fragment_sold_products" />
</navigation>