<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOffWhite"
    tools:context=".ui.activityclient.CheckoutActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_checkout_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/title_checkout"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold"
            android:paddingLeft="@dimen/toolbar_title_paddingLeft"
            android:paddingRight="0dp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_checkout_activity"
        android:fillViewport="true"
        android:layout_above="@+id/ll_checkout_place_order"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.designersstore.utils.MSPTextView
                android:id="@+id/tv_product_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/checkout_lbl_product_items"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cart_list_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_product_items" />

            <com.example.designersstore.utils.MSPTextView
                android:id="@+id/tv_selected_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_cart_list_items"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/checkout_lbl_selected_address"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/ll_checkout_address_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_selected_address"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp">

                <com.example.designersstore.utils.MSPTextView
                    android:id="@+id/tv_checkout_address_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="Home" />

                <com.example.designersstore.utils.MSPTextViewBold
                    android:id="@+id/tv_checkout_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="18sp"
                    tools:text="Denis Panjuta" />

                <com.example.designersstore.utils.MSPTextView
                    android:id="@+id/tv_checkout_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="14sp"
                    tools:text="XYZ" />

                <com.example.designersstore.utils.MSPTextView
                    android:id="@+id/tv_checkout_additional_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="14sp"
                    tools:text="XYZ" />

                <com.example.designersstore.utils.MSPTextView
                    android:id="@+id/tv_checkout_other_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="14sp"
                    tools:text="XYZ" />

                <com.example.designersstore.utils.MSPTextView
                    android:id="@+id/tv_checkout_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="14sp"
                    tools:text="+64 123456789" />
            </LinearLayout>

            <com.example.designersstore.utils.MSPTextView
                android:id="@+id/tv_items_receipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_checkout_address_details"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/checkout_lbl_items_receipt"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_items_receipt"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.example.designersstore.utils.MSPTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_subtotal"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="@dimen/checkout_label_value_textSize" />

                    <com.example.designersstore.utils.MSPTextView
                        android:id="@+id/tv_checkout_sub_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/checkout_label_value_textSize"
                        tools:text="$100"
                        android:gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.example.designersstore.utils.MSPTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_shipping_charge"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="@dimen/checkout_label_value_textSize" />

                    <com.example.designersstore.utils.MSPTextView
                        android:id="@+id/tv_checkout_shipping_charge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$10.0"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/checkout_label_value_textSize"
                        android:gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.example.designersstore.utils.MSPTextViewBold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_total_amount"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="@dimen/checkout_label_value_textSize" />

                    <com.example.designersstore.utils.MSPTextViewBold
                        android:id="@+id/tv_checkout_total_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="@dimen/checkout_label_value_textSize"
                        tools:text="$110"
                        android:gravity="center_horizontal" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_checkout_place_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.designersstore.utils.MSPTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_payment_mode"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/checkout_label_value_textSize" />

            <com.example.designersstore.utils.MSPTextViewBold
                android:id="@+id/tv_payment_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_cash_on_delivery"
                android:textAlignment="center"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/checkout_label_value_textSize"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <com.example.designersstore.utils.MSPButton
            android:id="@+id/btn_place_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/btn_lbl_place_order"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_terms_and_condition_Client" />

    </LinearLayout>

</RelativeLayout>